[package]
name = "lso"
version = "0.1.0"
edition = "2021"

[dependencies]
backoff = { version = "0.4", features = ["tokio"] }
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
futures-util = "0.3"
image = "0.24"
once_cell = "1.8"
pin-project = "1.0"
plotters = "0.3"
plotters-bitmap = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serenity = "0.11"
tacview = { version = "0.1" }
thiserror = "1.0"
time = { version = "0.3", features = ["local-offset", "formatting", "parsing"] }
tokio =  { version = "1.2", features = ["rt-multi-thread", "macros", "signal", "fs", "sync"] }
tonic = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
ultraviolet = { version = "0.9", features = ["f64"] }
zip = "0.6"

[dependencies.stubs]
package = "dcs-grpc-stubs"
git = "https://github.com/DCS-gRPC/rust-server.git"
rev = "0.7.0"
features = ["client"]

[dev-dependencies]
tracing-test = "0.2"
